--- a/package.json
+++ b/package.json
@@ -6,17 +6,32 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/three": "^0.149.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@heroicons/react": "^2.0.16",
+    "autoprefixer": "^10.4.13",
+    "framer-motion": "^10.2.3",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "react-social-icons": "^5.15.0",
+    "react-tsparticles": "^2.9.3",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.2.7",
+    "tsparticles": "^2.9.3"
   }
 }
