--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prettier": "^2.8.4",
     "react-social-icons": "^5.15.0",
     "react-tsparticles": "^2.9.3",
+    "swiper": "^9.1.0",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.2.7",
     "tsparticles": "^2.9.3"
