--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+NEXT_PUBLIC_EMAILJS_SERVICE=ServiceID
+NEXT_PUBLIC_EMAILJS_TEMPLATE=TemplateID
+NEXT_PUBLIC_EMAILJS_PUBLICKEY=PublicKey
 NEXT_PUBLIC_SANITY_DATASET=production
 NEXT_PUBLIC_SANITY_PROJECT_ID=project_id
 NEXT_PUBLIC_BASE_URL=http://localhost:3000/
